# dexhand_description

./: .gitignore  README.md  copy-fusion.sh  package.xml  setup.cfg  setup.py
launch/: display.launch.py
meshes/: base_link.stl  forearm_1.stl  index-bulk_1.stl  index-mlp_1.stl  index-plp_1.stl  index_knuckle_1.stl  index_tip_1.stl  middle-bulk_1.stl  middle-knuckle_1.stl  middle-tip_1.stl  middle_mlp_1.stl  middle_plp_1.stl  pinky-bulk_1.stl  pinky-knuckle_1.stl  pinky_bulk_1.stl  pinky_knuckle_1.stl  pinky_mlp_1.stl  pinky_plp_1.stl  pinky_tip_1.stl  ring-mlp_1.stl  ring-plp_1.stl  ring_knuckle_1.stl  ring_tip_1.stl  thumb-cmc-a_1.stl  thumb-cmc-b_1.stl  thumb-mlp_1.stl  thumb-tip_1.stl  thumb_plp_1.stl  wrist-upper_1.stl  wrist_lower_1.stl
meshes/left/: base_link.stl  forearm_left_1.stl  hand-cover-left_1.stl  index_bulk_left_1.stl  index_knuckle_1.stl  index_mlp_1.stl  index_plp_1.stl  index_tip_1.stl  middle_bulk_left_1.stl  middle_knuckle_1.stl  middle_mlp_1.stl  middle_plp_1.stl  middle_tip_1.stl  pinky_bulk_left_1.stl  pinky_knuckle_1.stl  pinky_mlp_1.stl  pinky_plp_1.stl  pinky_tip_1.stl  ring_bulk_left_1.stl  ring_knuckle_1.stl  ring_mlp_1.stl  ring_plp_1.stl  ring_tip_1.stl  thumb_cmc_a_1.stl  thumb_cmc_b_1.stl  thumb_mlp_1.stl  thumb_plp_1.stl  thumb_tip_1.stl  wrist_lower_1.stl  (+1 more)
rviz/: urdf.rviz
urdf/: dexhand-left.gazebo  dexhand-left.trans  dexhand-left.urdf  dexhand-left.xacro  dexhand-right.gazebo  dexhand-right.trans  dexhand-right.urdf  dexhand-right.xacro  dexhand.gazebo  dexhand.trans  dexhand.urdf  dexhand.xacro  materials.xacro
(+28 files in other folders)
